# objviewer

./: CMakeLists.txt  LICENSE  README.md
examples/: bmw.mtl  cube.mtl
shaders/: fragment.glsl  vertex.glsl
src/: camera.cc  camera.h  main.cc  main.cpp  mesh.cc  mesh.h  parser.cpp  parser.h  shader.cpp  shader.h  viewer.cc  viewer.cpp  viewer.h  window.cc  window.h
